Верстка комонента корзины товаров

--- a/src/components/EmptyCart/EmptyCart.module.scss
+++ b/src/components/EmptyCart/EmptyCart.module.scss
@@ -19,6 +19,9 @@
 	}
 	button {
 		margin-top: 75px;
+		padding: 15px;
+		align-items: center;
+		text-align: center;
 		width: 210px;
 		height: 46px;
 		background: #000;
