--- a/src/components/ProductCart/ProductCart.module.scss
+++ b/src/components/ProductCart/ProductCart.module.scss
@@ -89,6 +89,15 @@
 				font-size: 22px;
 				font-weight: 700;
 			}
+			.minus:disabled {
+				svg {
+					path {
+						fill: rgb(215, 215, 215);
+					}
+				}
+				cursor: not-allowed;
+				border: 2px solid rgb(215, 215, 215);
+			}
 		}
 		.price {
 			p {
